# models/area.go
@@ -1,5 +1,26 @@
 package models
 
+import (
+	"context"
+	"time"
+)
+
+var areaTypeAndCode = map[string]string{
+	"E92": "Country",
+	"W92": "Country",
+	"E12": "Region",
+	"E06": "Unitary Authorities",
+	"W06": "Unitary Authorities",
+	"E47": "Combined Authorities",
+	"E11": "Metropolitan Counties",
+	"E10": "Counties",
+	"E09": "London Boroughs",
+	"E08": "Metropolitan Districts",
+	"E07": "Non-metropolitan Districts",
+	"E05": "Electoral Wards",
+	"W05": "Electoral Wards",
+}
+
 // AreaType defines possible area types
 type AreaType int
 
@@ -10,6 +31,62 @@ var (
 		"cy": "Cymraeg",
 	}
 )
+
+// AreaName represents the structure of the area name details used for update request
+type AreaName struct {
+	Name       string     `json:"name"`
+	ActiveFrom *time.Time `json:"active_from"`
+	ActiveTo   *time.Time `json:"active_to"`
+}
+
+// AreaParams represents the structure of the area used for create or update
+type AreaParams struct {
+	Code          string     `json:"code"`
+	AreaName      *AreaName  `json:"area_name"`
+	GeometricData string     `json:"geometry"`
+	ActiveFrom    *time.Time `json:"active_from"`
+	ActiveTo      *time.Time `json:"active_to"`
+	AreaType      string
+}
+
+func (a *AreaParams) ValidateAreaRequest(ctx context.Context) []error {
+	var validationErrs []error
+	if a.Code == "" {
+		validationErrs = append(validationErrs, NewValidationError(ctx, InvalidAreaCodeError, InvalidAreaCodeErrorDescription))
+	}
+
+	if a.AreaType == "" {
+		validationErrs = append(validationErrs, NewValidationError(ctx, InvalidAreaTypeError, InvalidAreaTypeErrorDescription))
+	}
+
+	if a.AreaName == nil {
+		validationErrs = append(validationErrs, NewValidationError(ctx, AreaNameDetailsNotProvidedError, AreaNameDetailsNotProvidedErrorDescription))
+	} else {
+
+		if a.AreaName.Name == "" {
+			validationErrs = append(validationErrs, NewValidationError(ctx, AreaNameNotProvidedError, AreaNameNotProvidedErrorDescription))
+		}
+
+		if a.AreaName.ActiveFrom == nil {
+			validationErrs = append(validationErrs, NewValidationError(ctx, AreaNameActiveFromNotProvidedError, AreaNameActiveFromNotProvidedErrorDescription))
+		}
+
+		if a.AreaName.ActiveTo == nil {
+			validationErrs = append(validationErrs, NewValidationError(ctx, AreaNameActiveToNotProvidedError, AreaNameActiveToNotProvidedErrorDescription))
+		}
+	}
+
+	return validationErrs
+}
+
+func (a *AreaParams) SetAreaType(ctx context.Context) {
+	if len(a.Code) > 3 {
+		areaCodePrefix := a.Code[:3]
+		if areaType, ok := areaTypeAndCode[areaCodePrefix]; ok {
+			a.AreaType = areaType
+		}
+	}
+}
 
 // AreasDataResults represents the structure for an area in api v1.
 type AreasDataResults struct {
